# chatless-hs

./: .gitignore  Api.hs  Main.hs  Operations.hs  README.md  ServerSetup.hs  Utils.hs  chatless-hs.cabal
Api/: Config.hs  Hah.hs  Handlers.hs  Monad.hs  Paths.hs  Root.hs  RootUtils.hs  Utils.hs
Api/TopicSub/: Data.hs  Handlers.hs
Model/: ID.hs  IDGen.hs  Message.hs  Server.hs  StorableJson.hs  Topic.hs  TopicMember.hs  User.hs  Utils.hs
Operations/: Base.hs  Topic.hs  User.hs
Operations/Internal/: Topic.hs
Web/: ReqRes.hs  Respond.hs
Web/ReqRes/: Request.hs  Response.hs  Types.hs
Web/Respond/: Monad.hs  Request.hs  Response.hs  Types.hs
client/Chatless/: Client.hs
client/Chatless/Client/: Monad.hs  PathPointers.hs  Request.hs  Response.hs  Session.hs
docs/: demo-2014-08-22.md
model/Chatless/Model/: ID.hs  IDGen.hs  Message.hs  Server.hs  StorableJson.hs  Subscription.hs  Topic.hs  TopicMember.hs  User.hs  Utils.hs
src/: Api.hs  Main.hs
src/Api/: Auth.hs  Config.hs  Monad.hs  Ops.hs  Queries.hs  Routes.hs  Utils.hs
src/Api/Ops/: Base.hs  Topic.hs
src/Api/Ops/Topic/: Base.hs  Create.hs  Message.hs  Ops.hs  Parts.hs
src/Api/Queries/: Base.hs  Message.hs  Topic.hs  User.hs
src/Model/: ID.hs  StorableJson.hs  Topic.hs  TopicMember.hs  User.hs  Utils.hs
src/Operations/: Base.hs  Topic.hs  User.hs
