name:                chatless-hs
version:             0.1.0.0
synopsis:            chat service.
-- description:         
-- license:             
author:              aidan coyne
maintainer:          raptros.v76@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.20

executable "chatless"
  main-is: Main.hs
  default-language:    Haskell2010
  build-depends:
    base >=4.7 && <4.8,
    transformers-base == 0.4.*,
    monad-control == 0.3.*,
    groundhog == 0.6.*,
    groundhog-th,
    groundhog-sqlite,
    groundhog-postgresql,
    data-default-class,
    fast-logger == 2.*,
    transformers == 0.4.*,
    respond >= 0.1 && < 0.2,
    safe,
    containers == 0.5.5.*,
    text >= 1.2 && < 1.3,
    bytestring,
    monad-logger,
    resource-pool,
    wai >= 3.0 && < 4.0,
    wai-extra >= 3.0 && < 4.0,
    warp >= 3.0 && < 4.0,
    HList,
    http-types,
    path-pieces,
    unordered-containers,
    template-haskell == 2.9.*,    
    exceptions == 0.6.*, 
    mtl >= 2.2 && < 2.3, 
    aeson == 0.8.*,
    random,
    MonadRandom == 0.3.*,
    uuid >= 1.3.3 && < 1.4,
    lens >= 4.6 && < 4.7
