name:
    chatless-hs
version:
    0.1.0.0
synopsis:
    chat service.
description:
    chatless server
license:
    BSD3
author:
    aidan coyne
maintainer:
    raptros.v76@gmail.com
copyright:
    2014, aidan coyne
category:
    Web
build-type:
    Simple
cabal-version:
    >=1.20

library
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    default-extensions:
        OverloadedStrings
    hs-source-dirs:
        model,
        client
    exposed-modules:
        Chatless.Model.Utils,
        Chatless.Model.StorableJson,
        Chatless.Model.ID,
        Chatless.Model.IDGen,
        Chatless.Model.Server,
        Chatless.Model.User,
        Chatless.Model.Topic,
        Chatless.Model.TopicMember,
        Chatless.Model.Message
    build-depends:
        base >=4.7 && <4.8,
        transformers-base == 0.4.*,
        monad-control == 0.3.*,
        groundhog >= 0.6 && < 0.7,
        groundhog-th,
        transformers >= 0.4 && < 0.5,
        safe,
        text >= 1.2 && < 1.3,
        bytestring,
        monad-logger >= 0.3.9,
        path-pieces,
        unordered-containers,
        template-haskell == 2.9.*,    
        mtl >= 2.2 && < 2.3, 
        aeson == 0.8.*,
        random >= 1.0,
        uuid >= 1.3.3 && < 1.4,
        lens >= 4.6 && < 5


executable "chatless"
    main-is:
        Main.hs
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    default-extensions:
        OverloadedStrings
    hs-source-dirs:
        src
    build-depends:
        chatless-hs,
        base >=4.7 && <4.8,
        transformers-base == 0.4.*,
        monad-control == 0.3.*,
        groundhog == 0.6.*,
        groundhog-th,
        groundhog-sqlite,
        groundhog-postgresql,
        data-default-class,
        fast-logger == 2.*,
        transformers == 0.4.*,
        respond >= 0.1 && < 0.2,
        bifunctors,
        safe,
        containers == 0.5.5.*,
        text >= 1.2 && < 1.3,
        bytestring,
        monad-logger >= 0.3.9,
        resource-pool,
        wai >= 3.0 && < 4.0,
        wai-extra >= 3.0 && < 4.0,
        warp >= 3.0 && < 4.0,
        HList,
        http-types,
        path-pieces,
        unordered-containers,
        template-haskell == 2.9.*,    
        exceptions == 0.6.*, 
        mtl >= 2.2 && < 2.3, 
        aeson == 0.8.*,
        random,
        MonadRandom == 0.3.*,
        uuid >= 1.3.3 && < 1.4,
        lens >= 4.6 && < 4.7
